--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -41,5 +41,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: doc/build
+          publish_dir: build
           enable_jekyll: true
