Fixed CI process

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
       - run: pip install --upgrade pip
       - run: pip install -r tools/requirements_export.txt
       - run: pip install pytest
+      - run: wget https://github.com/Masao-Someki/espnet_onnx/releases/download/custom_ort_v1.11.1-espnet_onnx/onnxruntime-1.11.1_espnet_onnx-cp38-cp38-linux_x86_64.whl
+      - run: pip install onnxruntime-1.11.1_espnet_onnx-cp38-cp38-linux_x86_64.whl
       - run: pytest tests --config_dir tests/test_config
 
 workflows:
