--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,23 +2,64 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+parameters:
+  flag_install_s3prl:
+    type: boolean
+    default: false
+
 jobs:
-  run_tests_export:
+  run_tests:
+    working_directory: ~/espnet_onnx
+    docker:
+      - image: circleci/python:3.8
+    environment:
+      PYTHONPATH: ~/s3prl
+      
+    steps:
+      - checkout
+      - run: sudo apt-get -y update; sudo apt-get install libsndfile1
+      - run: # install dependencies
+          command: |
+            pip install --upgrade pip
+            pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
+            pip install -r tools/requirements_export.txt
+            pip install pytest
+      - run: # install custom onnxruntime for optimization
+          command: |
+            wget https://github.com/Masao-Someki/espnet_onnx/releases/download/custom_ort_v1.11.1-espnet_onnx/onnxruntime-1.11.1_espnet_onnx-cp38-cp38-linux_x86_64.whl
+            pip install onnxruntime-1.11.1_espnet_onnx-cp38-cp38-linux_x86_64.whl
+      - restore_cache: # restore s3prl folder
+          key: s3prl
+      - run: # install s3prl
+          command: |
+            cd ~/s3prl
+            pip install -e .
+            cd ~/espnet_onnx
+      - run: pytest tests --config_dir tests/test_config
+      - save_cache:
+          key: s3prl
+          paths:
+            - ~/s3prl
+            - ~/.cache/s3prl
+
+  run_install_s3prl:
     working_directory: ~/espnet_onnx
     docker:
       - image: circleci/python:3.8
     steps:
       - checkout
-      - run: sudo apt-get -y update; sudo apt-get install libsndfile1
-      - run: pip install --upgrade pip
-      - run: pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
-      - run: pip install -r tools/requirements_export.txt
-      - run: pip install pytest
-      - run: wget https://github.com/Masao-Someki/espnet_onnx/releases/download/custom_ort_v1.11.1-espnet_onnx/onnxruntime-1.11.1_espnet_onnx-cp38-cp38-linux_x86_64.whl
-      - run: pip install onnxruntime-1.11.1_espnet_onnx-cp38-cp38-linux_x86_64.whl
-      - run: pytest tests --config_dir tests/test_config
+      - run:
+          command: |
+            cd ~
+            git clone https://github.com/s3prl/s3prl
 
 workflows:
+  # install_s3prl:
+  #   when:
+  #     condition: << pipeline.parameters.flag_install_s3prl >>
+  #   jobs:
+  #     - run_install_s3prl
+
   build_and_test:
     jobs:
-      - run_tests_export
+      - run_tests
