--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,13 +52,18 @@ jobs:
           command: |
             cd ~
             git clone https://github.com/s3prl/s3prl
+      - save_cache:
+          key: s3prl
+          paths:
+            - ~/s3prl
+            - ~/.cache/s3prl
 
 workflows:
-  # install_s3prl:
-  #   when:
-  #     condition: << pipeline.parameters.flag_install_s3prl >>
-  #   jobs:
-  #     - run_install_s3prl
+  install_s3prl:
+    when:
+      condition: << pipeline.parameters.flag_install_s3prl >>
+    jobs:
+      - run_install_s3prl
 
   build_and_test:
     jobs:
