Update CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,11 +59,11 @@ jobs:
             - ~/.cache/s3prl
 
 workflows:
-  install_s3prl:
-    when:
-      condition: << pipeline.parameters.flag_install_s3prl >>
-    jobs:
-      - run_install_s3prl
+  # install_s3prl:
+  #   when:
+  #     condition: << pipeline.parameters.flag_install_s3prl >>
+  #   jobs:
+  #     - run_install_s3prl
 
   build_and_test:
     jobs:
