--- a/tests/test_config/integration/original/rnn.yml
+++ b/tests/test_config/integration/original/rnn.yml
@@ -1,11 +1,14 @@
 tag_name: kamo-naoyuki/timit_asr_train_asr_raw_word_valid.acc.ave
 optimization:
+  CPU:
+  Quantize:
 use_ort_for_espnet: false
-check_optimize:
+check_optimize: 
 check_export:
   - encoder
   - decoder
   - predecoder_0
   - ctc
 device:
-  -
+  - CPU
+  - Quantize
