--- a/tests/test_config/integration/original/rnn.yml
+++ b/tests/test_config/integration/original/rnn.yml
@@ -1,4 +1,6 @@
-tag_name: kamo-naoyuki/timit_asr_train_asr_raw_word_valid.acc.ave
+model_dir: /home/circleci/models/kamo-naoyuki-mini_an4_asr_train_raw_bpe_valid.acc.best.tgz
+# model_dir: /home/masao/doc/temp/lfs/librispeech_conformer_hop_length160.tgz
+tag_name: rnn
 optimization:
   CPU:
   Quantize:
