--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             pip install --upgrade pip
             pip install torch==1.11.0 torchvision==0.12.0 torchaudio==0.11.0
             pip install -r tools/requirements_export.txt
-            pip install pytest
+            pip install pytest espnet==202207
       - run:
           command: |
             cd ~
