--- a/tests/test_config/integration/custom/conformer_cpu.yml
+++ b/tests/test_config/integration/custom/conformer_cpu.yml
@@ -1,20 +1,19 @@
-model_dir: /home/circleci/models/librispeech_conformer_hop_length160.tgz
 tag_name: conformer_cpu
 optimization:
   CPU:
     encoder:
-      RelPosAttention: 12
+      RelPosAttention: 1
     decoder:
-      CrossAttention: 12
+      CrossAttention: 1
     lm:
-      CrossAttention: 15
+      CrossAttention: 1
   Quantize:
     encoder:
-      QRelPosAttention: 12
+      QRelPosAttention: 1
     decoder:
-      QCrossAttention: 12
+      QCrossAttention: 1
     lm:
-      QCrossAttention: 15
+      QCrossAttention: 1
 use_ort_for_espnet: true
 check_optimize:
   - encoder
@@ -25,6 +24,11 @@ check_export:
   - decoder
   - ctc
   - lm
-device: 
+device:
   - CPU
   - Quantize
+model_config:
+  asr_train_config: /home/circleci/espnet_onnx/tests/test_config/integration/model_config/cfm_ctc_att.yaml
+  use_transducer: false
+  use_lm: true
+  lm_train_config: /home/circleci/espnet_onnx/tests/test_config/integration/model_config/transformer_lm.yaml
