--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,14 @@ jobs:
           command: |
             source ~/venv/bin/activate
             pip install --upgrade pip
+            wget https://github.com/espnet/espnet_onnx/releases/download/custom_ort_v1.11.1.espnet.3/onnxruntime-1.11.1.espnet-cp38-cp38-linux_x86_64.whl
+            pip install onnxruntime-1.11.1.espnet-cp38-cp38-linux_x86_64.whl
+      - run:
+          command: |
+            source ~/venv/bin/activate
             pip install torch==1.11.0 torchvision==0.12.0 torchaudio==0.11.0
             pip install -r tools/requirements_export.txt
             pip install pytest
-      - run:
-          command: |
-            wget https://github.com/espnet/espnet_onnx/releases/download/custom_ort_v1.11.1.espnet.3/onnxruntime-1.11.1.espnet-cp38-cp38-linux_x86_64.whl
-            pip install onnxruntime-1.11.1.espnet-cp38-cp38-linux_x86_64.whl
       - restore_cache: # restore s3prl folder
           key: s3prl
       - run: # install s3prl
