--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,6 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-parameters:
-  flag_install_s3prl:
-    type: boolean
-    default: false
-
 jobs:
   run_tests:
     working_directory: ~/espnet_onnx
@@ -18,51 +13,9 @@ jobs:
     steps:
       - checkout
       - run: sudo apt-get -y update; sudo apt-get install libsndfile1
-      - run:
-          command: |
-            cd ~
-            python3 -m venv venv
-            mkdir -p ~/models
-      - run:
-          command: |
-            source ~/venv/bin/activate
-            pip install --upgrade pip
-            wget https://github.com/espnet/espnet_onnx/releases/download/custom_ort_v1.11.1.espnet.3/onnxruntime-1.11.1.espnet-cp38-cp38-linux_x86_64.whl
-            pip install onnxruntime-1.11.1.espnet-cp38-cp38-linux_x86_64.whl
-      - run:
-          command: |
-            source ~/venv/bin/activate
-            pip install torch==1.11.0 torchvision==0.12.0 torchaudio==0.11.0
-            pip install -r tools/requirements_export.txt
-            pip install pytest
       - restore_cache: # restore s3prl folder
           key: s3prl
-      - run: # install s3prl
-          command: |
-            source ~/venv/bin/activate
-            cd ~/s3prl
-            pip install -e .
-            cd ~/espnet_onnx
-      - run:
-          command: | 
-            source ~/venv/bin/activate
-            pytest tests --config_dir tests/test_config --wav_dir tests/test_wavs
-      - save_cache:
-          key: s3prl
-          paths:
-            - ~/s3prl
-            - ~/.cache/s3prl
-
-  run_install_s3prl:
-    working_directory: ~/espnet_onnx
-    docker:
-      - image: circleci/python:3.8
-    steps:
-      - checkout
-      - run:
-          command: |
-            cd ~
-            git clone https://github.com/s3prl/s3prl
+      - run: bash /home/circleci/espnet_onnx/tools/ci_test.sh
       - save_cache:
           key: s3prl
           paths:
@@ -70,10 +23,6 @@ jobs:
             - ~/.cache/s3prl
 
 workflows:
-  # setup_environment:
-  #   jobs:
-  #     - run_install_s3prl
-
   build_and_test:
     jobs:
       - run_tests
